--- a/Carpooling/src/main/resources/templates/ProfileView.html
+++ b/Carpooling/src/main/resources/templates/ProfileView.html
@@ -26,7 +26,7 @@
                             <li><a href="/">Home</a></li>
                             <li><a href="/profile">Profile</a></li>
                             <li><a href="/travels">My Travels</a></li>
-                            <li><a href="/logout">Log Out</a></li>
+                            <li><a th:href="@{/auth/logout}">Log Out</a></li>
                         </ul>
                     </div>
                 </li>
@@ -50,7 +50,7 @@
                     <p><strong>Last Name:</strong> <span th:text="${user.lastName}"></span></p>
                     <p><strong>Email:</strong> <span th:text="${user.email}"></span></p>
                     <p><strong>Phone:</strong> <span th:text="${user.phoneNumber}"></span></p>
-                    <a th:href="@{/profile/edit}" class="button primary">Edit Profile</a>
+                    <a th:href="@{/profile/{id}/edit(id=${user.id})}" class="button primary">Edit Profile</a>
                 </div>
 
                 <!-- Active Travels -->
