--- a/Carpooling/src/main/resources/templates/ProfileEditView.html
+++ b/Carpooling/src/main/resources/templates/ProfileEditView.html
@@ -18,9 +18,11 @@
                     <div id="menu">
                         <ul>
                             <li><a href="/">Home</a></li>
-                            <li><a href="/profile">Profile</a></li>
+                            <li th:if="${session.currentUser != null}">
+                                <a th:href="@{/profile/{id}(id=${user.id})}">Profile</a>
+                            </li>
                             <li><a href="/travels">My Travels</a></li>
-                            <li><a href="/logout">Log Out</a></li>
+                            <li><a th:href="@{/auth/logout}">Log Out</a></li>
                         </ul>
                     </div>
                 </li>
@@ -67,7 +69,7 @@
                     </div>
                     <ul class="actions">
                         <li><input type="submit" value="Save Changes" class="button primary"></li>
-                        <li><a href="/profile" class="button">Cancel</a></li>
+                        <li><a th:href="@{/profile/{id}(id=${user.id})}" class="button">Cancel</a></li>
                     </ul>
                 </form>
             </div>
