--- a/Carpooling/src/main/resources/templates/FindRidesView.html
+++ b/Carpooling/src/main/resources/templates/FindRidesView.html
@@ -26,7 +26,7 @@
                             </li>
                             <li><a href="/travels">My Travels</a></li>
                             <li><a href="/find/rides">Find Rides</a></li>
-                            <li><a href="/logout">Log Out</a></li>
+                            <li><a th:href="@{/auth/logout}">Log Out</a></li>
                         </ul>
                     </div>
                 </li>
